made modal responsive and fix alignment on contact form

--- a/css/imports/basics.css
+++ b/css/imports/basics.css
@@ -159,7 +159,6 @@ h2 {
     border: 20px dashed var(--cta-colour);
     border-radius: 50%;
     animation: spin 1.8s ease-in infinite;
-    margin: 0 300px;
 }
 
 @keyframes spin {
