--- a/css/styles.css
+++ b/css/styles.css
@@ -570,7 +570,11 @@ dialog #modal_img {
     
     #modal_img {
         width: 90%;
-       }
+    }
+
+    dialog #modal_img {
+        left: 5%;
+    }
 }
 
 @media (max-width: 480px) {
@@ -585,6 +589,10 @@ dialog #modal_img {
     .recipe__options {
         width: 90%;
         margin: 0 auto;
+    }
+
+    .column {
+        align-items: baseline;
     }
 
     input,
